--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -14,7 +14,7 @@
 	/* https://css-tricks.com/the-trick-to-viewport-units-on-mobile/ */ 
 	--vh: 100vh;
 	height: 100vh;
-	max-height: calc(var(--vh, 1vh) * 100);
+	height: calc(var(--vh, 1vh) * 100);
 }
 
 body {	
@@ -25,6 +25,7 @@ body {
 	font-size: calc(1rem + 0.25vw);
 	font-family: Ubuntu, Courier;
 	background-color: green;
+	height: calc((var(--vh)*100) - var(--body-margin-top) - var(--body-margin-bottom))
 }
 /* IE10+ workaround */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
@@ -304,7 +305,7 @@ footer {
 	font-size: calc(1rem - 0.25vw);
 	font-family: ubuntu, courier;
 	color: #ccc;
-	color: #AA00FF;
+	color: #yellow;
 }
 
 /* IE10+ workaround */
