--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -305,7 +305,7 @@ footer {
 	font-size: calc(1rem - 0.25vw);
 	font-family: ubuntu, courier;
 	color: #ccc;
-	color: #yellow;
+	color: yellow;
 }
 
 /* IE10+ workaround */
