--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -10,12 +10,15 @@
 	--footer-height: 2vh;
 	--footer-margin: 2vh;
 	
+}
+
+html {
 	/* workaround to prevent footer links from appearing under the browser controls on iOS */
 	/* https://css-tricks.com/the-trick-to-viewport-units-on-mobile/ */ 
 	/* --vh: 100vh; */
 	/* height: 100vh; */
 	/* height: calc(var(--vh, 1vh) * 100); */
-	height: -webkit-fill-available
+	min-height: -webkit-fill-available
 }
 
 body {	
@@ -118,6 +121,7 @@ section#content {
 	width: 75%;
 	float: left;
 	padding-bottom: 5vh;
+	margin-bottom: var(--footer-margin);
 	box-sizing: border-box;
 	background-color: green;
 	color: #cccccc;
@@ -302,13 +306,13 @@ sup {
 
 footer {
 	width: 100%;
-	height: var(--footer-height);
-	margin-top: var(--footer-margin);
+	/* height: var(--footer-height); */
+	/* margin-top: var(--footer-margin); */
 	text-align: right;
 	font-size: calc(1rem - 0.25vw);
 	font-family: ubuntu, courier;
 	color: #ccc;
-	color: orange;
+	color: brown;
 }
 
 /* IE10+ workaround */
