--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -311,6 +311,23 @@ sup {
 	white-space: nowrap; 
 }
 
+/* scrollbar styles */
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    
+}
+ 
+::-webkit-scrollbar-thumb {
+    
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+
 /* --- FOOTER --- */
 
 footer {
