--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -143,6 +143,7 @@ section#content.overflow-list {
 section#content p {
 	margin-left: 5%;
 	margin-right: 5%;
+	margin-top: 2.5%;
 }
 
 section#content p.quote {
